--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Taiki.loader.js";
+      var loaderUrl = buildUrl + "/Sans.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Taiki.data",
-        frameworkUrl: buildUrl + "/Taiki.framework.js",
-        codeUrl: buildUrl + "/Taiki.wasm",
+        dataUrl: buildUrl + "/Sans.data",
+        frameworkUrl: buildUrl + "/Sans.framework.js",
+        codeUrl: buildUrl + "/Sans.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Needle Game",
